# gppn

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/gppn-cli/: Cargo.toml
crates/gppn-cli/src/: main.rs
crates/gppn-cli/src/commands/: init.rs  mod.rs  peers.rs  send.rs  start.rs  status.rs
crates/gppn-core/: Cargo.toml  build.rs
crates/gppn-core/src/: config.rs  error.rs  lib.rs  payment_message.rs  state_machine.rs  types.rs
crates/gppn-crypto/: Cargo.toml
crates/gppn-crypto/src/: encryption.rs  error.rs  hashing.rs  kdf.rs  keys.rs  lib.rs  signing.rs  zkp.rs
crates/gppn-identity/: Cargo.toml
crates/gppn-identity/src/: credentials.rs  did.rs  document.rs  error.rs  lib.rs  trust_graph.rs  trust_score.rs
crates/gppn-network/: Cargo.toml
crates/gppn-network/src/: behaviour.rs  discovery.rs  error.rs  events.rs  gossip.rs  lib.rs  node.rs  protocol.rs  transport.rs
crates/gppn-node/: Cargo.toml
crates/gppn-node/src/: api.rs  commands.rs  config.rs  main.rs  node.rs  state.rs  storage.rs
crates/gppn-routing/: Cargo.toml
crates/gppn-routing/src/: advertisement.rs  drt.rs  error.rs  lib.rs  pathfinder.rs  route.rs  scoring.rs
crates/gppn-settlement/: Cargo.toml
crates/gppn-settlement/src/: error.rs  htlc.rs  lib.rs  manager.rs  traits.rs  types.rs
crates/gppn-settlement/src/adapters/: internal.rs
crates/veritas-cli/: Cargo.toml
crates/veritas-cli/src/: main.rs
crates/veritas-cli/src/commands/: attest.rs  identity.rs  init.rs  issue.rs  mod.rs  peers.rs  prove.rs  resolve.rs  start.rs  status.rs  verify.rs
crates/veritas-core/: Cargo.toml  build.rs
crates/veritas-core/src/: config.rs  credential_state.rs  error.rs  lib.rs  types.rs
crates/veritas-credentials/: Cargo.toml
crates/veritas-credentials/src/: error.rs  holder.rs  issuer.rs  lib.rs  schema.rs  verifier.rs
crates/veritas-crypto/: Cargo.toml
crates/veritas-crypto/src/: encryption.rs  error.rs  hashing.rs  kdf.rs  keys.rs  lib.rs  selective_disclosure.rs  signing.rs  zkp.rs
crates/veritas-identity/: Cargo.toml
crates/veritas-identity/src/: credentials.rs  did.rs  did_resolver.rs  document.rs  error.rs  humanity.rs  lib.rs  trust_graph.rs  trust_score.rs
crates/veritas-network/: Cargo.toml
crates/veritas-network/src/: behaviour.rs  discovery.rs  error.rs  events.rs  gossip.rs  lib.rs  node.rs  protocol.rs  transport.rs
crates/veritas-node/: Cargo.toml
crates/veritas-node/src/: api.rs  commands.rs  config.rs  main.rs  node.rs  state.rs  storage.rs
crates/veritas-proof/: Cargo.toml
crates/veritas-proof/src/: age_proof.rs  error.rs  humanity_proof.rs  kyc_level_proof.rs  lib.rs  residency_proof.rs
docs/: architecture.md  getting-started.md  node-operator.md  sdk-integration.md
infra/docker/: Dockerfile.node  Dockerfile.sa-ethereum  docker-compose.yml
proto/gppn/v1/: identity.proto  node.proto  payment_message.proto  routing.proto  settlement.proto  trust.proto
proto/veritas/v1/: credential.proto  identity.proto  node.proto  proof.proto  trust.proto
scripts/: demo.sh  setup.sh
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: client.ts  credentials.ts  errors.ts  identity.ts  index.ts  payments.ts  proofs.ts  routing.ts  settlement.ts  trust.ts  types.ts  verification.ts
sdks/typescript/tests/: client.test.ts  credentials.test.ts  identity.test.ts  payments.test.ts  proofs.test.ts  trust.test.ts  verification.test.ts
services/: build_all.sh
services/explorer-api/: go.mod  main.go
services/explorer-api/handlers/: network.go  payments.go
services/explorer-api/models/: models.go
services/gateway/: go.mod  main.go
services/gateway/handlers/: gateway.go
services/gateway/middleware/: auth.go
services/issuer-api/: go.mod  main.go
services/issuer-api/handlers/: issuer.go
services/pkg/: go.mod
services/pkg/config/: config.go
services/pkg/logging/: logging.go
services/pkg/metrics/: metrics.go
services/registry-api/: go.mod  main.go
services/registry-api/handlers/: registry.go
services/sa-bitcoin/: adapter.go  adapter_test.go  go.mod  main.go
services/sa-ethereum/: adapter.go  adapter_test.go  go.mod  main.go
services/sa-stablecoin/: adapter.go  adapter_test.go  go.mod  main.go
services/verifier-api/: go.mod  main.go
services/verifier-api/handlers/: verifier.go
spec/: GPPN-SPEC-v1.md  VERITAS-SPEC-v1.md
spec/gips/: GIP-0001-protocol-v1.md
spec/vips/: VIP-0001-protocol-v1.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: credential_flow.rs  trust_attestation.rs  zkp_proofs.rs
