[workspace]
resolver = "2"
members = [
    "crates/veritas-core",
    "crates/veritas-crypto",
    "crates/veritas-network",
    "crates/veritas-credentials",
    "crates/veritas-proof",
    "crates/veritas-identity",
    "crates/veritas-node",
    "crates/veritas-cli",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Veritas Foundation <dev@veritas.network>"]
license = "Apache-2.0"
repository = "https://github.com/veritas-protocol/veritas"
description = "Veritas — Decentralized identity protocol with AI-resistant proof of humanity"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Protobuf
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

# Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "identify",
    "kad",
    "macros",
    "request-response",
    "cbor",
    "serde",
] }

# Cryptography
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1"
argon2 = "0.5"
rand = "0.8"

# Storage
rocksdb = "0.22"

# Concurrency
dashmap = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v7", "serde"] }

# Encoding
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
bytes = "1"

# Async trait
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Zeroize
zeroize = { version = "1", features = ["derive"] }

# Futures
futures = "0.3"

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
