[package]
name = "gppn-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPPN command-line interface for node operators"

[[bin]]
name = "gppn"
path = "src/main.rs"

[dependencies]
gppn-core = { path = "../gppn-core" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
