[package]
name = "gppn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPPN core types, payment message, and state machine"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
