[package]
name = "gppn-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPPN cryptographic operations: Ed25519, ChaCha20-Poly1305, BLAKE3"

[dependencies]
gppn-core = { path = "../gppn-core" }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
