[package]
name = "gppn-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPPN P2P networking via libp2p"

[dependencies]
gppn-core = { path = "../gppn-core" }
gppn-crypto = { path = "../gppn-crypto" }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
