[package]
name = "gppn-settlement"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPPN settlement abstraction layer, HTLC engine, and adapters"

[dependencies]
gppn-core = { path = "../gppn-core" }
gppn-crypto = { path = "../gppn-crypto" }
async-trait = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
