[package]
name = "veritas-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Veritas CLI — command-line interface for decentralized identity"

[[bin]]
name = "veritas"
path = "src/main.rs"

[dependencies]
veritas-core = { path = "../veritas-core" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
