[package]
name = "veritas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Veritas core types, credential state machine, and configuration"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
