[package]
name = "veritas-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Veritas cryptographic operations: Ed25519, ChaCha20-Poly1305, BLAKE3, ZKP commitments"

[dependencies]
veritas-core = { path = "../veritas-core" }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
