[package]
name = "veritas-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Veritas identity layer: DIDs, Verifiable Credentials, TrustGraph, Humanity"

[dependencies]
veritas-core = { path = "../veritas-core" }
veritas-crypto = { path = "../veritas-crypto" }
async-trait = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
