[package]
name = "veritas-proof"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Veritas zero-knowledge proof system: age, residency, KYC, humanity proofs"

[dependencies]
veritas-core = { path = "../veritas-core" }
veritas-crypto = { path = "../veritas-crypto" }
blake3 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
